# icub-iaitabletop

./: .gitignore  .htaccess  .travis.yml  CMakeLists.txt  IAITableTopControllerModule_8cpp_source.html  IAITableTopControllerModule_8h_source.html  IAITableTopFTSensorReadThread_8cpp_source.html  IAITableTopFTSensorReadThread_8h_source.html  IAITableTopPositionReadThread_8cpp_source.html  IAITableTopPositionReadThread_8h_source.html  ParamMatrixXYZ_8cpp_source.html  ParamMatrixXYZ_8h_source.html  README.md  dir_1574253fbcc0307c89940909e500a472.html  dir_792ad019961a4855c0e766db5a197263.html  dir_92e0efa3410ed5b0ca0f23ebc9998768.html  dir_b1db6c505a1013b07c979419b2c16d47.html  dirs.html  experiments.bat  files.html  group__IAITableTopController.html  index.html  main_8cpp_source.html  mainpage_8dox.html  modules.html  params.json
.travis/: push-doxygen-to-gh-pages.sh
MATLAB/: FingertipProfile.sfit  LoadTableTopData.m  ReceptiveField-SquarePath-LookupTable.txt  SaveHystheresisData.m  SaveTableTopPlots.m
MATLAB/Controller/: cart_robot_controller.fig  cart_robot_controller.m
MATLAB/Data/: Hystheresis.mat
MATLAB/DataCrunching/: ComputeHystheresisData.m
MATLAB/FittingFunctions/: FitFnCubicInterp.m  FitFnExp1.m  FitFnExp2.m  FitFnLinearInterp.m  FitFnPower1.m  FitFnPower2.m
MATLAB/Generators/: GenerateExperimentParamsProgressiveDepth.m  GenerateExperimentParamsSpatialResolutionLinearPath.m  GenerateExperimentParamsSpatialResolutionSquarePath.m
MATLAB/Plotters/: PlotTableTopAll.m  PlotTableTopHystheresis.m  PlotTableTopReceptiveField.m  PlotTableTopSkinNano17.m  PlotTableTopSkinPosition.m
MATLAB/Utilities/: AlignTimestamps.m  ExtractTaxels.m  FilterOutData.m
app/: CMakeLists.txt  FingertipsPortScopeConf.xml
app/applications/: FingertipsTableTop.xml
app/modules/: IAITableTopController.xml
commands/: IAICommands.txt  TaxelStartingPositions.txt  X-SEL 19200.ht  X-SEL 9600.ht  XSEL 1Axis SVOF.txt  XSEL 1Axis SVON.txt  XSEL Absolute Move.txt  XSEL Flag 600 On - Kopie.txt  XSEL Jog -.txt  XSEL Output 310 On.txt  XSEL Program 1 Start.txt  XSEL Program 1 Stop.txt  XSEL Soft Reset.txt  XSEL System Status.txt
conf/: Doxyfile  application.dox  mainpage.dox
doc/html/: IAITableTopControllerModule_8cpp_source.html  IAITableTopControllerModule_8h_source.html  IAITableTopFTSensorReadThread_8cpp_source.html  IAITableTopFTSensorReadThread_8h_source.html  IAITableTopPositionReadThread_8cpp_source.html  IAITableTopPositionReadThread_8h_source.html  ParamMatrixXYZ_8cpp_source.html  ParamMatrixXYZ_8h_source.html  _formulas.tex  dir_1574253fbcc0307c89940909e500a472.html  dir_5851c17ba353d1024cfc971fb82d21c8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_71cbe3fe5f1cef3b36217e277e6a66e9.html  dir_792ad019961a4855c0e766db5a197263.html  dir_92e0efa3410ed5b0ca0f23ebc9998768.html  dir_b1db6c505a1013b07c979419b2c16d47.html  dir_ddb4d7e95cc2d6c8e1ade10a20d7247d.html  dirs.html  files.html  group__IAITableTopController.html  group__tabletop__application.html  group__tabletop__application__fingertips.html  index.html  main_8cpp_source.html  mainpage_8dox.html  modules.html
html/: IAITableTopControllerModule_8cpp_source.html  IAITableTopControllerModule_8h_source.html  IAITableTopFTSensorReadThread_8cpp_source.html  IAITableTopFTSensorReadThread_8h_source.html  IAITableTopPositionReadThread_8cpp_source.html  IAITableTopPositionReadThread_8h_source.html  ParamMatrixXYZ_8cpp_source.html  ParamMatrixXYZ_8h_source.html  dir_1574253fbcc0307c89940909e500a472.html  dir_792ad019961a4855c0e766db5a197263.html  dir_92e0efa3410ed5b0ca0f23ebc9998768.html  dir_b1db6c505a1013b07c979419b2c16d47.html  dirs.html  files.html  group__IAITableTopController.html  index.html  main_8cpp_source.html  mainpage_8dox.html  modules.html
html/html-latest/: IAITableTopControllerModule_8cpp_source.html  IAITableTopControllerModule_8h_source.html  IAITableTopFTSensorReadThread_8cpp_source.html  IAITableTopFTSensorReadThread_8h_source.html  IAITableTopPositionReadThread_8cpp_source.html  IAITableTopPositionReadThread_8h_source.html  ParamMatrixXYZ_8cpp_source.html  ParamMatrixXYZ_8h_source.html  dir_1574253fbcc0307c89940909e500a472.html  dir_792ad019961a4855c0e766db5a197263.html  dir_92e0efa3410ed5b0ca0f23ebc9998768.html  dir_b1db6c505a1013b07c979419b2c16d47.html  dirs.html  files.html  group__IAITableTopController.html  index.html  main_8cpp_source.html  (+2 more)
scripts/: caninit.sh
src/: CMakeLists.txt
src/modules/IAITableTopController/: CMakeLists.txt  IAITableTopControllerModule.cpp  IAITableTopFTSensorReadThread.cpp  IAITableTopPositionReadThread.cpp  ParamMatrixXYZ.cpp  main.cpp
src/modules/IAITableTopController/include/: IAITableTopControllerModule.h  IAITableTopFTSensorReadThread.h  IAITableTopPositionReadThread.h  ParamMatrixXYZ.h
(+30 files in other folders)
